--- a/styles_dankpapes.css
+++ b/styles_dankpapes.css
@@ -620,17 +620,19 @@ div .mdl-textfield__label:after {
     font-size: 20px;
 }
 
-.help-ribbon {
-    width: 100%;
+.dankpapes-ribbon {
+    width: 150%;
+    margin-left: -16px;
     height: 40vh;
-    background-color: #F8BBD0;
+    background-color: #FFC8FF;
+    /* background-image: url('http://assets.manualcreative.com/wp-content/uploads/2014/09/Google_detail-2998x1998.jpg'); */
     -webkit-flex-shrink: 0;
     -ms-flex-negative: 0;
     flex-shrink: 0;
 }
 
-.demo-main {
-    margin-top: -35vh;
+.ribbon-main {
+    margin-top: -40vh;
     -webkit-flex-shrink: 0;
     -ms-flex-negative: 0;
     flex-shrink: 0;
