--- a/styles.css
+++ b/styles.css
@@ -230,6 +230,7 @@ div .mdl-textfield__label:after {
 }
 
 .mdl-demo main>.mdl-layout__tab-panel {
+    padding: 8px;
     padding-top: 48px;
 }
 
@@ -617,6 +618,9 @@ div .mdl-textfield__label:after {
 }
 
 .index-ribbon {
+    position: relative;
+    left: -8px;
+    padding: 8px;
     width: 100%;
     height: 40vh;
     background-color: #AAFFDB;
