--- a/styles_dankpapes.css
+++ b/styles_dankpapes.css
@@ -27,6 +27,10 @@ main {
   background: #F5F5F5;
   background-size: cover; }
 
+.mdl-layout {
+    background: #FFC8FF;
+}
+
 footer {
     box-shadow: 0px 500px 0px 500px #1d1d1d;
 }
@@ -163,17 +167,11 @@ div .mdl-textfield__label:after {
     top: -5px; //Manages floating label fly
 }
 
-.mdl-layout {
-    overflow: visible;
-}
-
 .mdl-layout__drawer {
     position: fixed;
 }
 
 .mdl-layout__content {
-    display: block;
-    overflow: visible;
     margin-top: 64px;
 }
 
@@ -751,3 +749,12 @@ div .mdl-textfield__label:after {
             margin-bottom: 40px;
             z-index: 900;
         }
+
+.mdl-layout__header {
+  -webkit-transition-property: max-height,box-shadow,background;
+  transition-property: max-height,box-shadow,background;
+}
+
+.mdl-layout__header.is-casting-shadow {
+  background: #F5F5F5;
+}
