--- a/styles_dankpapes.css
+++ b/styles_dankpapes.css
@@ -756,5 +756,5 @@ div .mdl-textfield__label:after {
 }
 
 .mdl-layout__header.is-casting-shadow {
-  background: #F5F5F5;
+  background: #FAFAFA;
 }
