--- a/styles_dankpapes.css
+++ b/styles_dankpapes.css
@@ -86,7 +86,7 @@ footer {
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
-    background-color: #2D2E31;
+    background-color: #505154;
 }
 
 .mdl-layout__drawer {
