--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ main {
   background: #F5F5F5;
   background-size: cover; }
 
+.mdl-layout {
+    background: #AAFFDB;
+}
+
 footer {
     box-shadow: 0px 500px 0px 500px #1d1d1d;
 }
@@ -81,7 +85,7 @@ footer {
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
-    background-color: #2D2E31;
+    background-color: #505154;
 }
 
 .mdl-layout__drawer {
@@ -160,17 +164,11 @@ div .mdl-textfield__label:after {
     top: -5px; //Manages floating label fly
 }
 
-.mdl-layout {
-    overflow: visible;
-}
-
 .mdl-layout__drawer {
     position: fixed;
 }
 
 .mdl-layout__content {
-    display: block;
-    overflow: visible;
     margin-top: 64px;
 }
 
@@ -623,7 +621,7 @@ div .mdl-textfield__label:after {
     padding: 8px;
     width: 100%;
     height: 40vh;
-    background-color: #AAFFDB;
+    background-color: #FBBA64;
     /* background-image: url('http://assets.manualcreative.com/wp-content/uploads/2014/09/Google_detail-2998x1998.jpg'); */
     -webkit-flex-shrink: 0;
     -ms-flex-negative: 0;
