--- a/styles_dankpapes.css
+++ b/styles_dankpapes.css
@@ -766,3 +766,13 @@ div .mdl-textfield__label:after {
     outline:none; 
     focus:none;
 }
+
+#view-source {
+      position: fixed;
+      display: block;
+      right: 0;
+      bottom: 0;
+      margin-right: 40px;
+      margin-bottom: 40px;
+      z-index: 900;
+    }
