--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,14 @@ main {
   background: #F5F5F5;
   background-size: cover; }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
+.mdl-layout {
+    background: #FFB0B3;
+}
+
 footer {
     box-shadow: 0px 500px 0px 500px #1d1d1d;
 }
@@ -753,4 +761,22 @@ div .mdl-textfield__label:after {
     -webkit-flex-shrink: 0;
     -ms-flex-negative: 0;
     flex-shrink: 0;
+}
+
+
+.mdl-layout__header {
+  -webkit-transition-property: max-height,box-shadow,background;
+  transition-property: max-height,box-shadow,background;
+}
+
+.mdl-layout__header.is-casting-shadow {
+  background: #FFB0B3;
+}
+
+.mdl-layout .mdl-layout__header,
+.mdl-layout .mdl-layout__drawer-button {
+  /* This background is dark, so we set text to white. Use 87% black instead if
+     your background is light. */
+    outline:none; 
+    focus:none;
 }
