--- a/styles_dankpapes.css
+++ b/styles_dankpapes.css
@@ -23,6 +23,10 @@ body {
     background: #F5F5F5;
 }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 main {
   background: #F5F5F5;
   background-size: cover; }
